# social-media-analytics-automation

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: .env.example  config.yaml  config_default.yaml
scripts/: install_task.ps1  run_social_media_analytics.bat  uninstall_task.ps1
src/social_media_analytics/: constants.py  main.py
src/social_media_analytics/analytics/: counter.py  loader.py  period.py
src/social_media_analytics/clients/: apify.py
src/social_media_analytics/collectors/: instagram.py  youtube.py
src/social_media_analytics/collectors/clients/: apify.py
src/social_media_analytics/notification/: email.py
src/social_media_analytics/notification/templates/: monthly_report.md
src/social_media_analytics/reports/: charts.py  excel.py  summary.py
src/social_media_analytics/setup/: config_io.py  wizard.py
src/social_media_analytics/storage/: csv_writer.py  json_writer.py
src/social_media_analytics/utils/: config.py  logger.py  state.py
